--- a/RPS.css
+++ b/RPS.css
@@ -16,3 +16,9 @@
 .Cc {
     color: blue;
 }
+
+.Br {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: medium;
+    
+}
